--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -4,10 +4,11 @@
  * Licensed under MIT (https://spdx.org/licenses/MIT)
  */
 
-@import 'https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display:400,400i,700,900';
+@import 'https://fonts.googleapis.com/css?family=Raleway:400,400i,700|Playfair+Display:400,400i,700,900';
 body {
   /*font-family: 'Lora', 'Times New Roman', serif;*/
-  font-family: 'Montserrat', sans-serif;
+  /*font-family: 'Georgia', serif;*/
+  font-family: 'Raleway', sans-serif;
   font-size: 20px;
   color: #404040;
 }
